# pip-tools

./: .pre-commit-config.yaml  pyproject.toml
lib_a/: pyproject.toml
lib_b/: pyproject.toml
